--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ svg {
 }
 
 .fill-bar {
-  width: 5vw;
+  width: 100%;
   height: 3vh;
   background: linear-gradient(to right, #4787fb, #67dffd);
   border-radius: 15px;
